# desenvolvimento_web

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  search.html
aula00/: index.html
aulas/exemplos_css/: exemplo_css_01.html  index.html  package.json
aulas/exemplos_css/css/: estilo.css  estilo_02.css
codigos/: contexto.html
docs/: aula00.md  boas_praticas.md
documentacao/: mkdocs.yml
documentacao/docs/: index.md
documentacao/site/: index.html
site/: 404.html
site/boas_praticas/: index.html
site/search/: search_index.json
